Credit people for their work and update copyright file.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
 2008-03-27  Raphael Hertzog  <hertzog@debian.org>
+            Frank Lichtenheld  <djpig@debian.org>
+            Joey Hess  <joeyh@debian.org>
+            Colin Watson  <cjwatson@debian.org>
 
 	* Merge branch 'sourcev3'. It contains an extensive refactoring of
 	dpkg-source around many new modules in scripts/Dpkg/Source/.
@@ -54,9 +57,9 @@
 	a new patch at the end of the series if changes are present
 	at build-time.
 	* scripts/Dpkg/Source/Package/V3_0/bzr.pm: Experimental format
-	based on a bzr repository.
+	based on a bzr repository. Contributed by Colin Watson.
 	* scripts/Dpkg/Source/Package/V3_0/git.pm: Experimental format
-	based on a git repository.
+	based on a git repository. Contributed by Joey Hess.
 	* scripts/Dpkg/Source/Package/V3_0/custom.pm: Special purpose
 	format that can be used to create source packages with arbitrary
 	files. Useful for helper tools (like git-buildpackage) which can
