--- a/debian/changelog
+++ b/debian/changelog
@@ -86,9 +86,9 @@ dpkg (1.14.17) UNRELEASED; urgency=low
     activate. By default, do not activate the warning about useless
     libraries at the binary level (instead the new warning above is activated
     by default: it's less strict and more useful).
-  * Merge of the sourcev3 branch. dpkg-source has been heavily refactored to
-    make it easier to support multiple source package formats. Several new
-    source package formats have been added:
+  * dpkg-source has been heavily refactored to make it easier to support
+    multiple source package formats. Several new source package formats have
+    been added:
     - the format "2.0" is the original wig&pen
     - the format "3.0 (quilt)" is based on 2.0. It uses a tarball for the
       debian directory and can thus include binary files. Binaries
@@ -112,7 +112,8 @@ dpkg (1.14.17) UNRELEASED; urgency=low
       generate the files by themselves in a more efficient way
       (like all the *-buildpackage tools). Closes: #246918
     - the formats "3.0 (git/bzr)" are experimental formats based
-      on corresponding VCS repositories.
+      on corresponding VCS repositories. Thanks to Joey Hess and Colin Watson
+      respectively.
   * dpkg-source has a new --no-check option. It disables GPG check and
     checksums checks. Closes: #220758
 
