--- a/AUTHORS
+++ b/AUTHORS
@@ -12,12 +12,13 @@ based on the Perl implementation by:
 It is currently maintained by:
 
 	Guillem Jover <guillem@debian.org>
-	Brendan O'Dea <bod@debian.org>
-	Christian Perrier <bubulle@debian.org>
 	Frank Lichtenheld <djpig@debian.org>
+	Raphael Hertzog <hertzog@debian.org>
+	Christian Perrier <bubulle@debian.org> (translation coordinator)
 
 and has previously been maintained by:
 
+	Brendan O'Dea <bod@debian.org> (2006-2007)
 	Scott James Remnant <scott@netsplit.com> (2004-2005)
 	Adam Heath <doogie@brainfood.com> (2001-2003)
 	Wichert Akkerman <wakkerma@debian.org> (1999-2003)
