--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-03-28  Guillem Jover  <guillem@debian.org>
+
+	* src/packages.c (process_queue): Fix typo in comment.
+
 2008-03-28  Ian Jackson  <ian@davenant.greenend.org.uk>
 
 	* src/help.c (statusstrings): Improve Breaks message by saying that
