* man/dpkg-source.1: Move paragraph about --include-binaries.

--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,8 @@
+2008-03-28  Raphael Hertzog  <hertzog@debian.org>
+
+	* dpkg-source.1: Move a paragraph at its right place and some
+	other presentation fixes.
+
 2008-03-25  Ian Jackson  <ian@davenant.greenend.org.uk>
 
 	* dpkg.1: Document improved status-fd output.
