Improve depisok error message when the package involved is installed

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2008-03-28  Ian Jackson  <ian@davenant.greenend.org.uk>
 
+	* src/depcon.c (depisok): Improve whynot message by stating when a
+	package is installed with 'is present'.
+
+2008-03-28  Ian Jackson  <ian@davenant.greenend.org.uk>
+
 	* src/help.c (cu_post_script_tasks): New function.
 	(do_script): Install cu_post_script_tasks as a cleanup handler.
 	(maintainer_script_alternative): Call post_script_tasks if the
