Refactor returning code in deppossi_ok_found

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2008-03-28  Ian Jackson  <ian@davenant.greenend.org.uk>
 
+	* src/packages.c (deppossi_ok_found): Refactor returning code.
+
+2008-03-28  Ian Jackson  <ian@davenant.greenend.org.uk>
+
 	* src/depcon.c (depisok): Improve whynot message by stating when a
 	package is installed with 'is present'.
 
