dpkg-buildpackage: change default value of LDFLAGS
* scripts/dpkg-buildpackage.pl: LDFLAGS now defaults to an empty
value instead of "-Wl,-Bsymbolic-functions". The latter can break
some libraries at run-time and such a change is best done
at the beginning of a release cycle.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2008-03-28  Raphael Hertzog  <hertzog@debian.org>
+
+	* scripts/dpkg-buildpackage.pl: LDFLAGS now defaults to an empty
+	value instead of "-Wl,-Bsymbolic-functions". The latter can break
+	some libraries at run-time and such a change is best done
+	at the beginning of a release cycle.
+
 2008-03-27  Raphael Hertzog  <hertzog@debian.org>
 
 	* scripts/Dpkg/Shlibs.pm: Support cross-compilation by adding
