Implement triggers support
Closes: #17243, #68981, #215374, #217622, #248693, #308285

--- a/debian/changelog
+++ b/debian/changelog
@@ -38,6 +38,8 @@ dpkg (1.14.17) UNRELEASED; urgency=low
     dpkg test suite can be skept if desired.
   * Improve log and status-fd output by printing more status change updates
     and actions. Thanks to Ian Jackson.
+  * Implement triggers support. Thanks to Ian Jackson.
+    Closes: #17243, #68981, #215374, #217622, #248693, #308285
 
   [ Raphael Hertzog ]
   * Add a warning displayed by dpkg-genchanges if the current version is
