--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2008-03-30  Guillem Jover  <guillem@debian.org>
 
+	* dselect/main.cc: Use <ncursesw/term.h> instead of <term.h>.
+	* dselect/dselect.h: Use <ncursesw/curses.h> instead of <curses.h>.
+	* dselect/Makefile.am (curkeys.h): Likewise.
+
+2008-03-30  Guillem Jover  <guillem@debian.org>
+
 	* po/POTFILES.in: Add 'lib/cleanup.c', 'lib/log.c', 'lib/myopt-util.c'
 	and remove 'lib/showcright.c'.
 	* scripts/Makefile.am (EXTRA_DIST): Add
