--- a/dselect/po/ChangeLog
+++ b/dselect/po/ChangeLog
@@ -3,23 +3,23 @@
 	* dselect.pot: Regenerated.
 	* *.po: Merged with dselect.pot.
 
-2008-03-10  Robert Luberda <robert@debian.org>
+2008-03-10  Robert Luberda  <robert@debian.org>
 
 	* pl.po: Consistently use Polish quotation marks in translations.
 	* pl.po: Updated to 286t (after locally re-generating the pot file).
 
-2008-02-24  Robert Luberda <robert@debian.org>
+2008-02-24  Robert Luberda  <robert@debian.org>
 
 	* pl.po: Recoded to UTF-8.
 	* pl.po: Updated to 286t.
 
-2008-02-09  Eddy Petrișor <eddy.petrisor@gmail.com>
+2008-02-09  Eddy Petrișor  <eddy.petrisor@gmail.com>
 
-	* ro.po: 285t
+	* ro.po: Updated to 285t.
 
 2008-01-25  Piarres Beobide  <pi@beobide.net>
 
-	* eu.po: 286t
+	* eu.po: Updated to 286t.
 
 2008-01-07  Guillem Jover  <guillem@debian.org>
 
