--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -7,7 +7,7 @@
 
 	* sk.po: Updated to 927t
 
-2008-03-09  Robert Luberda <robert@debian.org>
+2008-03-09  Robert Luberda  <robert@debian.org>
 
 	* pl.po: Apply some fixes suggested by Wiktor Wandachowicz.
 	* pl.po: Consistently use Polish quotation marks in translations.
@@ -20,12 +20,12 @@
 
 	* sv.po: Updated to 921t.
 
-2008-02-24  Robert Luberda <robert@debian.org>
+2008-02-24  Robert Luberda  <robert@debian.org>
 
 	* pl.po: Recoded to UTF-8
 	* pl.po: Updated to 921t.
 
-2008-02-09  Eddy Petri?or <eddy.petrisor@gmail.com>
+2008-02-09  Eddy Petrișor  <eddy.petrisor@gmail.com>
 
 	* ro.po: Update to 927t.
 
@@ -340,7 +340,7 @@
 
 	* zh_TW.po: Update for one string.
 
-2007-01-11  Eddy Petri?or  <eddy.petrisor@gmail.com>
+2007-01-11  Eddy Petrișor  <eddy.petrisor@gmail.com>
 
 	* ro.po: Typo correction in dpkg-divert.
 
@@ -357,7 +357,7 @@
 
 	* pa.po: New Punjabi translation (201t up to now).
 
-2006-12-22  Eddy Petri?or  <eddy.petrisor@gmail.com>
+2006-12-22  Eddy Petrișor  <eddy.petrisor@gmail.com>
 
 	* ro.po: some improvements in wording and wrote my name with the right
 	diacritics (still 920t).
@@ -1212,15 +1212,15 @@
 
 	* fr.po: Completed.
 
-2005-05-25  Eddy Petrisor  <eddy.petrisor@gmail.com>
+2005-05-25  Eddy Petrișor  <eddy.petrisor@gmail.com>
 
 	* ro.po: Nearly complete translation. :-)
 
-2005-05-22  Eddy Petrisor  <eddy.petrisor@gmail.com>
+2005-05-22  Eddy Petrișor  <eddy.petrisor@gmail.com>
 
 	* ro.po: Better translation.
 
-2005-05-19  Eddy Petrisor  <eddy.petrisor@gmail.com>
+2005-05-19  Eddy Petrișor  <eddy.petrisor@gmail.com>
 
 	* ro.po: Add translation.
 	* LINGUAS: Add Romanian to the language list.
