--- a/debian/changelog
+++ b/debian/changelog
@@ -149,10 +149,10 @@ dpkg (1.14.17) UNRELEASED; urgency=low
   [ Updated dpkg translations ]
   * Korean (Changwoo Ryu).
   * Polish (Robert Luberda).
-  * Romanian (Eddy Petri?or).
+  * Romanian (Eddy Petrişor).
+  * Slovak (Ivan Masár). Closes: #471342
   * Swedish (Peter Karlsson).
   * Thai (Theppitak Karoonboonyanan). Closes: #468916
-  * Slovak (Ivan Masár). Closes: #471342
 
   [ Updated manpages translations ]
   * German (Helge Kreutzmann).
@@ -169,7 +169,7 @@ dpkg (1.14.17) UNRELEASED; urgency=low
 
   [ Updated dselect translations ]
   * Polish (Robert Luberda).
-  * Romanian (Eddy Petri?or).
+  * Romanian (Eddy Petrişor).
 
  -- Frank Lichtenheld <djpig@debian.org>  Fri, 29 Feb 2008 18:34:54 +0100
 
@@ -692,7 +692,7 @@ dpkg (1.14.7) unstable; urgency=low
   * German (Sven Joachim). Closes: #440537
   * Nepali (Shiva Prasad Pokharel). Closes: #437825
   * Portuguese (Miguel Figueiredo). Closes: #441113
-  * Romanian (Eddy Petri?or).
+  * Romanian (Eddy Petrişor).
   * Vietnamese (Clytie Siddall). Closes: #440502
   * Korean (Sunjae Park). Closes: #443190
 
