--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2008-03-30  Guillem Jover  <guillem@debian.org>
 
+	* configure.ac: Release 1.14.18.
+
+2008-03-30  Guillem Jover  <guillem@debian.org>
+
 	* dselect/main.cc: Use <ncursesw/term.h> instead of <term.h>.
 	* dselect/dselect.h: Use <ncursesw/curses.h> instead of <curses.h>.
 	* dselect/Makefile.am (curkeys.h): Likewise.
