--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-dpkg (1.14.17) UNRELEASED; urgency=low
+dpkg (1.14.17) experimental; urgency=low
 
   [ Guillem Jover ]
   * Replace strdup plus error checking usage with a new m_strdup function.
@@ -171,7 +171,7 @@ dpkg (1.14.17) UNRELEASED; urgency=low
   * Polish (Robert Luberda).
   * Romanian (Eddy Petrişor).
 
- -- Frank Lichtenheld <djpig@debian.org>  Fri, 29 Feb 2008 18:34:54 +0100
+ -- Guillem Jover <guillem@debian.org>  Sun, 30 Mar 2008 12:48:22 +0300
 
 dpkg (1.14.16.6) unstable; urgency=medium
 
