--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+dpkg (1.14.18) UNRELEASED; urgency=low
+
+  *
+
+ -- Guillem Jover <guillem@debian.org>  Sun, 30 Mar 2008 13:04:29 +0300
+
 dpkg (1.14.17) experimental; urgency=low
 
   [ Guillem Jover ]
