--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,18 @@
 dpkg (1.14.18) UNRELEASED; urgency=low
 
+  [ Guillem Jover ]
   * Bump po4a version in Build-Depends to 0.33.1-1, as usage of UTF-8
     in original man pages was causing build failures. Closes: #473498
   * Add triggers documentation to dpkg-dev. Closes: #473449
+
+  [ Raphael Hertzog ]
+  * When dpkg-source builds a source package of Format: 2.0 or 3.0 (quilt) it
+    applies the patches before the build if
+    debian/patches/.dpkg-source-applied doesn't exist. This file is created
+    during extraction if patches are applied, and is auto-excluded from the
+    debian tarball. This enables on-the-fly conversion of source packages from
+    Format: 1.0 to Format: 3.0 (quilt) without manual intervention of the
+    user. This feature can be disabled with the option --no-preparation.
 
   [ Updated dselect translations ]
   * German. (Sven Joachim).
