--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 dpkg (1.14.18) UNRELEASED; urgency=low
 
-  *
+  * Bump po4a version in Build-Depends to 0.33.1-1, as usage of UTF-8
+    in original man pages was causing build failures. Closes: #473498
 
  -- Guillem Jover <guillem@debian.org>  Sun, 30 Mar 2008 13:04:29 +0300
 
