Updated German dselect translation

--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,9 @@ dpkg (1.14.18) UNRELEASED; urgency=low
     in original man pages was causing build failures. Closes: #473498
   * Add triggers documentation to dpkg-dev. Closes: #473449
 
+  [ Updated dselect translations ]
+  * German. (Sven Joachim).
+
  -- Guillem Jover <guillem@debian.org>  Sun, 30 Mar 2008 13:04:29 +0300
 
 dpkg (1.14.17) experimental; urgency=low
