Simplified Chinese translation update

--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,9 @@ dpkg (1.14.18) UNRELEASED; urgency=low
   [ Updated dselect translations ]
   * German. (Sven Joachim).
 
+  [ Updated dpkg translations ]
+  * Simplified Chinese (Deng Xiyue). Closes: #473523
+
  -- Guillem Jover <guillem@debian.org>  Sun, 30 Mar 2008 13:04:29 +0300
 
 dpkg (1.14.17) experimental; urgency=low
