--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-03-31  Deng Xiyue  <manphiz-guest@users.alioth.debian.org>
+
+	* zh_CN.po: Updated to 984t
+
 2008-03-30  Guillem Jover  <guillem@debian.org>
 
 	* dpkg.pot: Regenerated.
@@ -25,7 +29,7 @@
 	* pl.po: Recoded to UTF-8
 	* pl.po: Updated to 921t.
 
-2008-02-09  Eddy Petrișor  <eddy.petrisor@gmail.com>
+2008-02-09  Eddy Petri?or  <eddy.petrisor@gmail.com>
 
 	* ro.po: Update to 927t.
 
@@ -340,7 +344,7 @@
 
 	* zh_TW.po: Update for one string.
 
-2007-01-11  Eddy Petrișor  <eddy.petrisor@gmail.com>
+2007-01-11  Eddy Petri?or  <eddy.petrisor@gmail.com>
 
 	* ro.po: Typo correction in dpkg-divert.
 
@@ -357,7 +361,7 @@
 
 	* pa.po: New Punjabi translation (201t up to now).
 
-2006-12-22  Eddy Petrișor  <eddy.petrisor@gmail.com>
+2006-12-22  Eddy Petri?or  <eddy.petrisor@gmail.com>
 
 	* ro.po: some improvements in wording and wrote my name with the right
 	diacritics (still 920t).
@@ -1212,15 +1216,15 @@
 
 	* fr.po: Completed.
 
-2005-05-25  Eddy Petrișor  <eddy.petrisor@gmail.com>
+2005-05-25  Eddy Petri?or  <eddy.petrisor@gmail.com>
 
 	* ro.po: Nearly complete translation. :-)
 
-2005-05-22  Eddy Petrișor  <eddy.petrisor@gmail.com>
+2005-05-22  Eddy Petri?or  <eddy.petrisor@gmail.com>
 
 	* ro.po: Better translation.
 
-2005-05-19  Eddy Petrișor  <eddy.petrisor@gmail.com>
+2005-05-19  Eddy Petri?or  <eddy.petrisor@gmail.com>
 
 	* ro.po: Add translation.
 	* LINGUAS: Add Romanian to the language list.
