Fix typos (processesing -> processing)
Spotted by Sven Joachim <svenjoac@gmx.de>.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-04-01  Guillem Jover  <guillem@debian.org>
+
+	* src/enquiry.c (badstatinfos): Fix typos (processesing -> processing).
+
 2008-03-30  Guillem Jover  <guillem@debian.org>
 
 	* configure.ac: Bump version to 1.14.18~.
