libdpkg: Use TRIGGERSLOCKFILE instead of literal string

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2008-04-01  Guillem Jover  <guillem@debian.org>
 
+	* lib/trigdeferred.l (trigdef_update_start): Use TRIGGERSLOCKFILE
+	instead of literal string.
+
+2008-04-01  Guillem Jover  <guillem@debian.org>
+
 	* src/enquiry.c (badstatinfos): Fix typos (processesing -> processing).
 
 2008-03-30  Guillem Jover  <guillem@debian.org>
