--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-04-01  Guillem Jover  <guillem@debian.org>
+
+	* POTFILES.in: Rename 'lib/trigdeferred.c' to 'lib/trigdeferred.l'.
+
 2008-03-31  Deng Xiyue  <manphiz-guest@users.alioth.debian.org>
 
 	* zh_CN.po: Updated to 984t
