po: Regenerate .pot file and merge .po files with it

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,5 +1,10 @@
 2008-04-01  Guillem Jover  <guillem@debian.org>
 
+	* dpkg.pot: Regenerated.
+	* *.po: Merged with dpkg.pot.
+
+2008-04-01  Guillem Jover  <guillem@debian.org>
+
 	* POTFILES.in: Rename 'lib/trigdeferred.c' to 'lib/trigdeferred.l'.
 
 2008-03-31  Deng Xiyue  <manphiz-guest@users.alioth.debian.org>
