Dpkg::IPC: Support redirection of STDERR in fork_and_exec()
* scripts/Dpkg/IPC.pm (fork_and_exec): Handle redirection
of STDERR with new options error_to_{file,pipe,string,handle}.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-04-01  Raphael Hertzog  <hertzog@debian.org>
+
+	* scripts/Dpkg/IPC.pm (fork_and_exec): Handle redirection
+	of STDERR with new options error_to_{file,pipe,string,handle}.
+
 2008-04-01  Guillem Jover  <guillem@debian.org>
 
 	* lib/trigdeferred.l (trigdef_update_start): Use TRIGGERSLOCKFILE
