dpkg-source: add option --skip-patches
* scripts/Dpkg/Source/Package/V2_0.pm: Add the option
--skip-patches to not apply patches at the end of the source
package extraction. Also works for Format: 3.0 (quilt).
* man/dpkg-source.1: Document the above change.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2008-04-01  Raphael Hertzog  <hertzog@debian.org>
 
+	* scripts/Dpkg/Source/Package/V2_0.pm: Add the option
+	--skip-patches to not apply patches at the end of the source
+	package extraction. Also works for Format: 3.0 (quilt).
+	* man/dpkg-source.1: Document the above change.
+
+2008-04-01  Raphael Hertzog  <hertzog@debian.org>
+
 	* scripts/Dpkg/Source/Package/V2_0.pm (do_extract): Create
 	debian/patches/.dpkg-source-applied containing the list of patches
 	applied during extraction.
