--- a/man/dpkg-source.1
+++ b/man/dpkg-source.1
@@ -413,6 +413,9 @@ apparently unapplied.
 .PP
 .B Extract options
 .TP
+.B \-\-skip\-patches
+Do not apply patches at the end of the extraction.
+.TP
 .B \-\-without\-quilt
 Don't use quilt to apply patches but dpkg-source's own code. It won't be
 possible to use quilt directly on the unpacked directory but it will be
