Update German scripts translations (mainly correct almost all fuzzy strings)

--- a/scripts/po/ChangeLog
+++ b/scripts/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-04-01  Helge Kreutzmann  <debian@helgefjell.de>
+
+	* de.po: Updated to 368t3f96u.
+
 2008-03-30  Guillem Jover  <guillem@debian.org>
 
 	* dpkg-dev.pot: Regenerated.
