--- a/debian/changelog
+++ b/debian/changelog
@@ -23,6 +23,9 @@ dpkg (1.14.18) UNRELEASED; urgency=low
   [ Updated dpkg translations ]
   * Simplified Chinese (Deng Xiyue). Closes: #473523
 
+  [ Updated scripts translations ]
+  * German (Helge Kreutzmann).
+ 
  -- Guillem Jover <guillem@debian.org>  Sun, 30 Mar 2008 13:04:29 +0300
 
 dpkg (1.14.17) experimental; urgency=low
