--- a/po/pt.po
+++ b/po/pt.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: dpkg 1.14\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2008-04-01 07:21+0300\n"
-"PO-Revision-Date: 2007-09-06 21:55+0100\n"
+"PO-Revision-Date: 2008-04-01 19:47+0100\n"
 "Last-Translator: Miguel Figueiredo <elmig@debianpt.org>\n"
 "Language-Team: Portuguese <traduz@debianpt.org>\n"
 "MIME-Version: 1.0\n"
@@ -472,34 +472,32 @@ msgid "alternatives (`|') not allowed in %s field"
 msgstr "alternativas (`|' não são permitidas no campo %s"
 
 #: lib/fields.c:508
-#, fuzzy
 msgid "value for `triggers-pending' field not allowed in this context"
-msgstr "valor para o campo `config-version' não é permitido neste contexto"
+msgstr "o valor para o campo `triigers-pending' não é permitido neste contexto"
 
 #: lib/fields.c:514
-#, fuzzy, c-format
+#, c-format
 msgid "illegal pending trigger name `%.255s': %s"
-msgstr "campo `%s', nome de pacote inválido `%.255s': %s"
+msgstr "nome de 'trigger' pendente ilegal `%.255s': %s"
 
 #: lib/fields.c:518
 #, c-format
 msgid "duplicate pending trigger `%.255s'"
-msgstr ""
+msgstr "'trigger' duplicado `%.255s' pendente"
 
 #: lib/fields.c:533
-#, fuzzy
 msgid "value for `triggers-awaited' field not allowed in this context"
-msgstr "valor para o campo `status' não é permitido neste contexto"
+msgstr "valor para o campo `triggers-awaited' não é permitido neste contexto"
 
 #: lib/fields.c:539
-#, fuzzy, c-format
+#, c-format
 msgid "illegal package name in awaited trigger `%.255s': %s"
-msgstr "nome de pacote ilegal na linha %d: %.250s"
+msgstr "nome de pacote ilegal no 'trigger' esperado `%.255s': %s"
 
 #: lib/fields.c:545
-#, fuzzy, c-format
+#, c-format
 msgid "duplicate awaited trigger package `%.255s'"
-msgstr "lista de ficheiros para o pacote `%.250s'"
+msgstr "'trigger' esperado duplicado do pacote `%.255s'"
 
 #: lib/lock.c:47
 msgid "unable to unlock dpkg status database"
@@ -537,9 +535,8 @@ msgid "realloc failed (%ld bytes)"
 msgstr "falhou realloc (%ld bytes)"
 
 #: lib/mlib.c:78
-#, fuzzy
 msgid "failed to allocate memory"
-msgstr "falhou criar directório"
+msgstr "a alocação de memória falhou"
 
 #: lib/mlib.c:85
 #, c-format
@@ -1023,29 +1020,29 @@ msgid ""
 msgstr "não foi possível instalar o novo ficheiro info `%.250s' como `%.250s'"
 
 #: lib/triglib.c:444
-#, fuzzy, c-format
+#, c-format
 msgid "unable to create new file triggers file `%.250s'"
-msgstr "não foi possível abrir novo ficheiro depot `%.250s'"
+msgstr "não foi possível criar novo ficheiro `%.250s' de 'triggers' de ficheiro"
 
 #: lib/triglib.c:453
-#, fuzzy, c-format
+#, c-format
 msgid "unable to write new file triggers file `%.250s'"
-msgstr "não foi possível abrir novo ficheiro depot `%.250s'"
+msgstr "não foi possível escrever novo ficheiro `%.250s' de 'triggers' de ficheiro"
 
 #: lib/triglib.c:458
-#, fuzzy, c-format
+#, c-format
 msgid "unable to install new file triggers file as `%.250s'"
-msgstr "não foi possível instalar o novo ficheiro info `%.250s' como `%.250s'"
+msgstr "não foi possível instalar o novo ficheiro `%.250s' de 'triggers' de ficheiro"
 
 #: lib/triglib.c:479
-#, fuzzy, c-format
+#, c-format
 msgid "unable to read file triggers file `%.250s'"
-msgstr "não foi possível ler o ficheiro de parte `%.250s'"
+msgstr "não foi possível ler o ficheiro `%.250s' de 'triggers' de ficheiro"
 
 #: lib/triglib.c:487
-#, fuzzy, c-format
+#, c-format
 msgid "syntax error in file triggers file `%.250s'"
-msgstr "erro de leitura no ficheiro de configuração `%.255s'"
+msgstr "erro de sintaxe no ficheiro `%.250s' de 'triggers' de ficheiro"
 
 #: lib/triglib.c:491
 #, c-format
@@ -1086,24 +1083,24 @@ msgid "unable to set ownership of triggers state directory `%.250s'"
 msgstr "não foi possível ler o directório depot `%.250s'"
 
 #: lib/utils.c:50
-#, fuzzy, c-format
+#, c-format
 msgid "read error in `%.250s'"
-msgstr "erro de leitura em %.250s"
+msgstr "erro de leitura em `%.250s'"
 
 #: lib/utils.c:55
-#, fuzzy, c-format
+#, c-format
 msgid "fgets gave an empty string from `%.250s'"
-msgstr "fgets deu uma string vazia vinda de diversions [i]"
+msgstr "fgets deu uma string vazia de `%.250s'"
 
 #: lib/utils.c:57
-#, fuzzy, c-format
+#, c-format
 msgid "too-long line or missing newline in `%.250s'"
-msgstr "o ficheiro `%.250s' está corrompido - falta newline após %.250s"
+msgstr "linha demasiado comprida ou falta 'newline' em `%.250s'"
 
 #: lib/utils.c:69
-#, fuzzy, c-format
+#, c-format
 msgid "unexpected eof reading `%.250s'"
-msgstr "fim de ficheiro inesperado em %.250s"
+msgstr "fim de ficheiro inesperado ao ler `%.250s'"
 
 #: lib/varbuf.c:109
 msgid "failed to realloc for variable buffer"
