--- a/debian/changelog
+++ b/debian/changelog
@@ -22,6 +22,7 @@ dpkg (1.14.18) UNRELEASED; urgency=low
 
   [ Updated dpkg translations ]
   * Simplified Chinese (Deng Xiyue). Closes: #473523
+  * Portuguese (Miguel Figueiredo).
 
   [ Updated scripts translations ]
   * German (Helge Kreutzmann).
