--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-04-01  Miguel Figueiredo  <elmig@debianpt.org>
+
+	* pt.po: Updated to 916t
+
 2008-04-01  Guillem Jover  <guillem@debian.org>
 
 	* dpkg.pot: Regenerated.
