Vietnamese translation update

--- a/debian/changelog
+++ b/debian/changelog
@@ -23,6 +23,7 @@ dpkg (1.14.18) UNRELEASED; urgency=low
   [ Updated dpkg translations ]
   * Simplified Chinese (Deng Xiyue). Closes: #473523
   * Portuguese (Miguel Figueiredo).
+  * Vietnamese (Clytie Siddall). Closes: #473726
 
   [ Updated manpages translations ]
   * German (Helge Kreutzmann).
