--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-04-01  Clytie Siddall  <clytie@riverland.net.au>
+
+	* vi.po: Updated to 983t1f
+
 2008-04-01  Miguel Figueiredo  <elmig@debianpt.org>
 
 	* pt.po: Updated to 916t
@@ -42,7 +46,7 @@
 	* pl.po: Recoded to UTF-8
 	* pl.po: Updated to 921t.
 
-2008-02-09  Eddy Petri?or  <eddy.petrisor@gmail.com>
+2008-02-09  Eddy Petrişor  <eddy.petrisor@gmail.com>
 
 	* ro.po: Update to 927t.
 
@@ -357,7 +361,7 @@
 
 	* zh_TW.po: Update for one string.
 
-2007-01-11  Eddy Petri?or  <eddy.petrisor@gmail.com>
+2007-01-11  Eddy Petrişor  <eddy.petrisor@gmail.com>
 
 	* ro.po: Typo correction in dpkg-divert.
 
@@ -374,7 +378,7 @@
 
 	* pa.po: New Punjabi translation (201t up to now).
 
-2006-12-22  Eddy Petri?or  <eddy.petrisor@gmail.com>
+2006-12-22  Eddy Petrişor  <eddy.petrisor@gmail.com>
 
 	* ro.po: some improvements in wording and wrote my name with the right
 	diacritics (still 920t).
