Start work on updating German man pages, work on fuzzy strings first

--- a/debian/changelog
+++ b/debian/changelog
@@ -24,7 +24,10 @@ dpkg (1.14.18) UNRELEASED; urgency=low
   * Simplified Chinese (Deng Xiyue). Closes: #473523
   * Portuguese (Miguel Figueiredo).
 
-  [ Updated scripts translations ]
+  [ Updated manpages translations ]
+  * German (Helge Kreutzmann).
+
+   [ Updated scripts translations ]
   * German (Helge Kreutzmann).
  
  -- Guillem Jover <guillem@debian.org>  Sun, 30 Mar 2008 13:04:29 +0300
