--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,7 @@
+2008-04-01  Helge Kreutzmann  <debian@helgefjell.de>
+
+	* po/de.po: Updated to 1484t1f69u.
+
 2008-03-30  Raphael Hertzog  <hertzog@debian.org>
 
 	* dpkg-source.1: Make it clear that Format: 2.0 is not really
